samples/_failures_safe/1761159636_5924a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74242cd5.c: In function ‘main’:
./samples/SAFE/__tmp_74242cd5.c:149:19: error: expected ‘;’ at end of input
  149 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_74242cd5.c:149:13: error: expected declaration or statement at end of input
  149 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_74242cd5.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74242cd5.c:149:13: error: expected declaration or statement at end of input
